--- a/MyPage.html
+++ b/MyPage.html
@@ -111,7 +111,7 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">Its my page people</h1>
-            <p class="lead">Hope everyone will like it.</p>
+            <p class="lead">Hope everyone soon gonna like it.</p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Under Development.</a>
             </p>
