--- a/MyPage.html
+++ b/MyPage.html
@@ -55,6 +55,7 @@
         <li class="active"><a href="http://www.apple.com/iphone/">Iphones <span class="sr-only">(current)</span></a></li>
         <li><a href="http://www.google.com/nexus/">Nexus</a></li>
 		<li><a href="http://www.samsung.com/us/explore/galaxy-s-6-features-and-specs/">Galaxy</a></li>
+		<li><a href="c:/users/user/desktop/test/index.html">Index</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other Smartphones <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -128,15 +129,11 @@
       </div>
 
     </div>
-
-
-
-
-
-
-
-
-
+	
+<div class="alert alert-warning alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong>Warning!</strong> Better check yourself, you're not looking too good.
+</div>
 
 </body>
 
